sfdx-source/main/default/objects/VCC_SCD_Automation_Configuration__mdt/fields/Generate_VVS_Link__c.field-meta.xml
<CustomField>
    <fullName>Generate_VVS_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generate VVS Video Link functionality</description>
    <inlineHelpText>Generate VVS Video Link functionality</inlineHelpText>
    <label>Generate VVS Link</label>
    <type>Checkbox</type>
</CustomField>