sfdx-source/main/default/objects/VCC_SCD_Automation_Configuration__mdt/fields/NLT__c.field-meta.xml
<CustomField>
    <fullName>NLT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NLT - No Later Than Appointment Comments</description>
    <inlineHelpText>NLT - No Later Than Appointment Comments</inlineHelpText>
    <label>NLT</label>
    <type>Checkbox</type>
</CustomField>