sfdx-source/main/default/objects/VCC_SCD_Automation_Configuration__mdt/fields/VCV_Case_and_PN__c.field-meta.xml
<CustomField>
    <fullName>VCV_Case_and_PN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Create Case and Progress Note functionality</description>
    <inlineHelpText>Auto Create Case and Progress Note functionality</inlineHelpText>
    <label>VCV Case and PN</label>
    <type>Checkbox</type>
</CustomField>